--- a/Tododo/src/docs/asciidoc/index.adoc
+++ b/Tododo/src/docs/asciidoc/index.adoc
@@ -2,13 +2,18 @@
 :sectnums:
 :toc: left
 :toclevels: 4
-:toc-title: Table of Contents
+:toc-title: 목차
 :source-highlighter: prettify
+
+Sh <6017891@gmail.com>
+
+v1.0.0
+
 
 ***
 
 == Todo Controller
-=== 할 일 등록
+=== Todo 생성
 .curl-request
 include::{snippets}/post-todo/curl-request.adoc[]
 
@@ -23,3 +28,74 @@ include::{snippets}/post-todo/http-response.adoc[]
 
 .response-headers
 include::{snippets}/post-todo/response-headers.adoc[]
+
+=== Todo 수정
+.curl-request
+include::{snippets}/patch-todo/curl-request.adoc[]
+
+.http-request
+include::{snippets}/patch-todo/http-request.adoc[]
+
+.path-parameters
+include::{snippets}/patch-todo/path-parameters.adoc[]
+
+.request-fields
+include::{snippets}/patch-todo/request-fields.adoc[]
+
+.http-response
+include::{snippets}/patch-todo/http-response.adoc[]
+
+.response-fields
+include::{snippets}/patch-todo/response-fields.adoc[]
+
+=== Todo 조회
+.curl-request
+include::{snippets}/get-todo/curl-request.adoc[]
+
+.http-request
+include::{snippets}/get-todo/http-request.adoc[]
+
+.path-parameters
+include::{snippets}/get-todo/path-parameters.adoc[]
+
+.http-response
+include::{snippets}/get-todo/http-response.adoc[]
+
+.response-fields
+include::{snippets}/get-todo/response-fields.adoc[]
+
+=== Todo 전체 조회
+.curl-request
+include::{snippets}/get-todos/curl-request.adoc[]
+
+.http-request
+include::{snippets}/get-todos/http-request.adoc[]
+
+.http-response
+include::{snippets}/get-todos/http-response.adoc[]
+
+.response-fields
+include::{snippets}/get-todos/response-fields.adoc[]
+
+=== Todo 삭제
+.curl-request
+include::{snippets}/delete-todo/curl-request.adoc[]
+
+.http-request
+include::{snippets}/delete-todo/http-request.adoc[]
+
+.path-parameters
+include::{snippets}/delete-todo/path-parameters.adoc[]
+
+.http-response
+include::{snippets}/delete-todo/http-response.adoc[]
+
+=== Todo 전체 삭제
+include::{snippets}/delete-all-todo/curl-request.adoc[]
+
+.http-request
+include::{snippets}/delete-all-todo/http-request.adoc[]
+
+.http-response
+include::{snippets}/delete-all-todo/http-response.adoc[]
+
